spade-tests/src/snapshots/spade_tests__integration__trait_tests__error_message_on_missing_method.snap
---
source: spade-tests/src/integration.rs
---
struct X {}

fn t(x: X) {
    x.test()
}


error: X has no method test
  ┌─ testinput:4:7
  │
4 │     x.test()
  │     --^^^^--
  │     │ │
  │     │ No such method
  │     This has type X
